# CMPE-275-Mini-1

./: .gitignore
final report/: Mini-1 Report.docx
fire-data-2020/multi-thread/: CMakeLists.txt  README.md  commands.txt  fire-data-analyzer.cpp  report.txt
fire-data-2020/single-thread/: CMakeLists.txt  README.md  fire-data-analyzer.cpp  report.txt
presentation/: mini-1.pptx
world-bank/multithread_parallel/: CMakeLists.txt  PERFORMANCE_SUMMARY.txt  PopulationData.cpp  PopulationData.h  README.md  main.cpp
world-bank/parallel_pthread/: PopulationData.cpp  PopulationData.h  main.cpp
world-bank/single-thread/: PopulationData.cpp  PopulationData.h  README.md  main.cpp
world-bank/single-thread/data/: CMakeLists.txt  PopulationData.h  main.cpp
